--- a/src/Skaar.ServiceBusEmulatorClient.Http/Skaar.ServiceBusEmulatorClient.Http.csproj
+++ b/src/Skaar.ServiceBusEmulatorClient.Http/Skaar.ServiceBusEmulatorClient.Http.csproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
+    <Import Project="..\CommonProps.targets" />
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
