--- a/src/Skaar.ServiceBusEmulatorClient/Skaar.ServiceBusEmulatorClient.csproj
+++ b/src/Skaar.ServiceBusEmulatorClient/Skaar.ServiceBusEmulatorClient.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+    <Import Project="..\CommonProps.targets" />
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
