--- a/src/Skaar.ServiceBusEmulatorClient.Http/Skaar.ServiceBusEmulatorClient.Http.csproj
+++ b/src/Skaar.ServiceBusEmulatorClient.Http/Skaar.ServiceBusEmulatorClient.Http.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <PackAsTool>true</PackAsTool>
+        <ToolCommandName>sbemulatorclient</ToolCommandName>
     </PropertyGroup>
 
     <ItemGroup>
