--- a/src/Skaar.ServiceBusEmulatorClient.Http/Skaar.ServiceBusEmulatorClient.Http.csproj
+++ b/src/Skaar.ServiceBusEmulatorClient.Http/Skaar.ServiceBusEmulatorClient.Http.csproj
@@ -17,4 +17,10 @@
       <ProjectReference Include="..\Skaar.ServiceBusEmulatorClient\Skaar.ServiceBusEmulatorClient.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
